--- a/src/app/pages/axa/axa.component.html
+++ b/src/app/pages/axa/axa.component.html
@@ -2,60 +2,62 @@
   <div class="line"></div>
   <img src="assets/projects/axa/logo.svg" class="logo">
   <h3>{{'projects.axa.h1' | translate}}</h3>
-  <p>{{'projects.axa.h1Des' | translate}}</p>
+  <p class="before-header">{{'projects.axa.h1Des' | translate}}</p>
   <h3>{{'projects.axa.h2' | translate}}</h3>
-  <h5>{{'projects.axa.sh1' | translate}}</h5>
+  <h5 class="h5-before-header h5-after-header">{{'projects.axa.sh1' | translate}}</h5>
   <h3>{{'projects.axa.h3' | translate}}</h3>
-  <p>{{'projects.axa.h3Des' | translate}}</p>
+  <p class="before-header">{{'projects.axa.h3Des' | translate}}</p>
   <h3>{{'projects.axa.h4' | translate}}</h3>
-  <p>{{'projects.axa.h4Des' | translate}}</p>
+  <p class="before-header">{{'projects.axa.h4Des' | translate}}</p>
   <h3>{{'projects.axa.h5' | translate}}</h3>
   <p>{{'projects.axa.h5Des' | translate}}</p>
   <img src="assets/projects/axa/pic1.png" class="p-image p1">
-  <img src="assets/projects/axa/pic2.png" class="p-image p1">
-  <img src="assets/projects/axa/pic3.png" class="p-image p1">
+  <img src="assets/projects/axa/pic2.png" class="p-image p1 no-top">
+  <img src="assets/projects/axa/pic3.png" class="p-image p1 no-top">
   <h3>{{'projects.axa.h6' | translate}}</h3>
   <h5>{{'projects.axa.sh2' | translate}}</h5>
   <p>{{'projects.axa.h6Des' | translate}}</p>
-  <img src="assets/projects/axa/pic4.png" class="p-image p1">
-  <img src="assets/projects/axa/pic5.png" class="p-image p1">
-  <img src="assets/projects/axa/pic6.png" class="p-image p1">
-  <img src="assets/projects/axa/pic7.png" class="p-image p1">
+  <img src="assets/projects/axa/pic4.png" class="p-image p1 shadow">
+  <img src="assets/projects/axa/pic5.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic6.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic7.png" class="p-image p1 shadow no-top">
   <h3>{{'projects.axa.h7' | translate}}</h3>
   <p>{{'projects.axa.h7Des' | translate}}</p>
-  <img src="assets/projects/axa/pic8.jpg" class="p-image p1">
-  <img src="assets/projects/axa/pic9.png" class="p-image p1">
-  <img src="assets/projects/axa/pic10.png" class="p-image p1">
+  <img src="assets/projects/axa/pic8.jpg" class="p-image p1 shadow ">
+  <img src="assets/projects/axa/pic9.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic10.png" class="p-image p1 shadow no-top">
   <h3>{{'projects.axa.h8' | translate}}</h3>
   <p>{{'projects.axa.h8Des' | translate}}</p>
-  <img src="assets/projects/axa/pic11.png" class="p-image p1">
-  <img src="assets/projects/axa/pic12.png" class="p-image p1">
-  <img src="assets/projects/axa/pic13.png" class="p-image p1">
-  <img src="assets/projects/axa/pic14.png" class="p-image p1">
+  <img src="assets/projects/axa/pic11.png" class="p-image p1 shadow ">
+  <img src="assets/projects/axa/pic12.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic13.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic14.png" class="p-image p1 shadow no-top">
   <h3>{{'projects.axa.h9' | translate}}</h3>
   <p>{{'projects.axa.h9Des' | translate}}</p>
-  <img src="assets/projects/axa/pic15.png" class="p-image p1">
-  <img src="assets/projects/axa/pic16.png" class="p-image p1">
-  <img src="assets/projects/axa/pic17.png" class="p-image p1">
-  <img src="assets/projects/axa/pic18.png" class="p-image p1">
+  <img src="assets/projects/axa/pic15.png" class="p-image p1 shadow">
+  <img src="assets/projects/axa/pic16.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic17.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic18.png" class="p-image p1 shadow no-top">
   <h3>{{'projects.axa.h10' | translate}}</h3>
   <p>{{'projects.axa.h10Des' | translate}}</p>
-  <img src="assets/projects/axa/pic19.png" class="p-image p1">
-  <img src="assets/projects/axa/pic20.png" class="p-image p1">
-  <img src="assets/projects/axa/pic21.png" class="p-image p1">
+  <img src="assets/projects/axa/pic19.png" class="p-image p1 shadow">
+  <img src="assets/projects/axa/pic20.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic21.png" class="p-image p1 shadow no-top">
   <h3>{{'projects.axa.h11' | translate}}</h3>
   <p>{{'projects.axa.h11Des' | translate}}</p>
-  <img src="assets/projects/axa/pic22.png" class="p-image p1">
-  <img src="assets/projects/axa/pic23.png" class="p-image p1">
-  <img src="assets/projects/axa/pic24.png" class="p-image p1">
-  <img src="assets/projects/axa/pic25.png" class="p-image p1">
-  <img src="assets/projects/axa/pic26.png" class="p-image p1">
-  <img src="assets/projects/axa/pic27.png" class="p-image p1">
-  <img src="assets/projects/axa/pic28.png" class="p-image p1">
-  <img src="assets/projects/axa/pic29.png" class="p-image p1">
+  <img src="assets/projects/axa/pic22.png" class="p-image p1 shadow">
+  <img src="assets/projects/axa/pic23.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic24.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic25.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic26.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic27.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic28.png" class="p-image p1 shadow no-top">
+  <img src="assets/projects/axa/pic29.png" class="p-image p1 shadow no-top">
+  <div class="arrow-holder">
+    <img src="assets/projects/arrow.png" alt="arrow" class="arrow" (click)="scrollToTop()" >
+  </div>
   <p class="no-header">{{'projects.axa.sh3' | translate}}</p>
   <p class="footer">{{'projects.gajol.footer' | translate}}</p>
-  <img src="assets/projects/arrow.png" alt="arrow" class="arrow" (click)="scrollToTop()" >
 
 </div>
 <div class="project-page-loader sk-three-bounce subPage" *ngIf="loading">
