--- a/src/app/pages/edc/edc.component.scss
+++ b/src/app/pages/edc/edc.component.scss
@@ -9,6 +9,17 @@
     .logo{
       margin-left: 34px;
     }
+    .p-image{
+      &.edc-phone{
+        margin-top: 23px;
+        width: 50%;
+      }
+    }
+    .phone-image{
+
+      //margin-top: -50px;
+      //margin-bottom: -50px;
+    }
   }
 
 }
