--- a/src/app/pages/gajol/gajol.component.html
+++ b/src/app/pages/gajol/gajol.component.html
@@ -5,7 +5,7 @@
   <p>{{'projects.gajol.h1Des' | translate}}</p>
   <img src="assets/projects/gajol/1image.png" class="p-image p1">
   <h3>{{'projects.gajol.h2' | translate}}</h3>
-  <p>{{'projects.gajol.h2Des' | translate}}</p>
+  <p class="before-header">{{'projects.gajol.h2Des' | translate}}</p>
   <h3>{{'projects.gajol.h3' | translate}}</h3>
   <p>{{'projects.gajol.h3Des' | translate}}</p>
   <img src="assets/projects/gajol/2image.png" class="p-image p1">
@@ -14,25 +14,27 @@
   <h5>{{'projects.gajol.sh1' | translate}}</h5>
   <p>{{'projects.gajol.sh1Des' | translate}}</p>
   <img src="assets/projects/gajol/3image.svg" class="p-image p1">
-  <h5>{{'projects.gajol.sh2' | translate}}</h5>
+  <h5 class="h5-before-image">{{'projects.gajol.sh2' | translate}}</h5>
   <p>{{'projects.gajol.sh2Des' | translate}}</p>
   <img src="assets/projects/gajol/4image.png" class="p-image p1">
-  <h5>{{'projects.gajol.sh3' | translate}}</h5>
+  <h5 class="h5-before-image">{{'projects.gajol.sh3' | translate}}</h5>
   <p>{{'projects.gajol.sh3Des' | translate}}</p>
-  <img src="assets/projects/gajol/5image1.jpg?v1" class="p-image p1 shadow center">
-  <h5>{{'projects.gajol.sh4' | translate}}</h5>
+  <img src="assets/projects/gajol/5image1.jpg?v1" class="p-image p1 shadow center" style="width: 80%">
+  <h5 class="h5-before-image">{{'projects.gajol.sh4' | translate}}</h5>
   <p>{{'projects.gajol.sh4Des' | translate}}</p>
   <img src="assets/projects/gajol/6image.png" class="p-image p1 shadow insta">
-  <h5>{{'projects.gajol.sh5' | translate}}</h5>
+  <h5 class="h5-before-image">{{'projects.gajol.sh5' | translate}}</h5>
   <p>{{'projects.gajol.sh5Des' | translate}}</p>
   <img src="assets/projects/gajol/7image.png" class="p-image p1 shadow">
   <div class="gajol-img">
     <img src="assets/projects/gajol/8image.png" class="p-image p1 shadow left">
     <img src="assets/projects/gajol/9image.jpg" class="p-image p1 shadow right" style="width: 80%">
   </div>
+  <div class="arrow-holder">
+    <img src="assets/projects/arrow.png" alt="arrow" class="arrow" (click)="scrollToTop()" >
+  </div>
   <p class="no-header">{{'projects.gajol.sh6Des' | translate}}</p>
   <p class="footer">{{'projects.gajol.footer' | translate}}</p>
-  <img src="assets/projects/arrow.png" alt="arrow" class="arrow" (click)="scrollToTop()" >
 
 
 </div>
