--- a/src/app/pages/imaread/imaread.component.html
+++ b/src/app/pages/imaread/imaread.component.html
@@ -1,33 +1,33 @@
 <div class="project-page imaread" [ngClass]="animate ? 'show' : ''" *ngIf="!loading">
   <div class="line"></div>
-  <img src="assets/projects/imread/logo.png" class="logo">
+  <img src="assets/projects/imread/logo.svg" class="logo">
   <h3>{{'projects.imread.h1' | translate}}</h3>
-  <p>{{'projects.imread.h1Des' | translate}}</p>
+  <p class="before-header">{{'projects.imread.h1Des' | translate}}</p>
   <h3>{{'projects.imread.h2' | translate}}</h3>
   <p>{{'projects.imread.h2Des' | translate}}</p>
   <img src="assets/projects/imread/pic1.png" class="p-image p1">
   <h3>{{'projects.imread.h3' | translate}}</h3>
-  <p>{{'projects.imread.h3Des' | translate}}</p>
-  <h3>{{'projects.imread.h4' | translate}}</h3>
-  <p>{{'projects.imread.h4Des' | translate}}</p>
+  <p class="before-header">{{'projects.imread.h3Des' | translate}}</p>
+<!--  <h3>{{'projects.imread.h4' | translate}}</h3>-->
+<!--  <p class="before-header">{{'projects.imread.h4Des' | translate}}</p>-->
   <h3>{{'projects.imread.h5' | translate}}</h3>
-  <h5>{{'projects.imread.sh1' | translate}}</h5>
+  <h5 class="h5-after-header h5-before-header">{{'projects.imread.sh1' | translate}}</h5>
   <h3>{{'projects.imread.h6' | translate}}</h3>
   <p>{{'projects.imread.h6Des' | translate}}</p>
   <img src="assets/projects/imread/pic2.png" class="p-image p1">
   <p>{{'projects.imread.h6Des1' | translate}}</p>
   <img src="assets/projects/imread/pic3.png" class="p-image p1">
-  <img src="assets/projects/imread/pic4.png" class="p-image p1">
-  <img src="assets/projects/imread/pic5.png" class="p-image p1">
-  <img src="assets/projects/imread/pic6.png" class="p-image p1">
-  <img src="assets/projects/imread/pic7.png" class="p-image p1">
-  <img src="assets/projects/imread/pic8.png" class="p-image p1">
+  <img src="assets/projects/imread/pic4.png" class="p-image p1 no-top">
+  <img src="assets/projects/imread/pic5.png" class="p-image p1 no-top">
+  <img src="assets/projects/imread/pic6.png" class="p-image p1 no-top">
+  <img src="assets/projects/imread/pic7.png" class="p-image p1 no-top">
+  <img src="assets/projects/imread/pic8.png" class="p-image p1 no-top">
   <h3>{{'projects.imread.h7' | translate}}</h3>
   <p>{{'projects.imread.h7Des' | translate}}</p>
   <img src="assets/projects/imread/pic9.png" class="p-image p1">
-  <img src="assets/projects/imread/pic10.png" class="p-image p1">
-  <img src="assets/projects/imread/pic11.png" class="p-image p1">
-  <img src="assets/projects/imread/pic12.png" class="p-image p1">
+  <img src="assets/projects/imread/pic10.png" class="p-image p1 no-top">
+  <img src="assets/projects/imread/pic11.png" class="p-image p1 no-top">
+  <img src="assets/projects/imread/pic12.png" class="p-image p1 no-top">
   <h3>{{'projects.imread.h7' | translate}}</h3>
   <p>{{'projects.imread.h8Des' | translate}} <span class="bold">{{'projects.imread.h8Bold' | translate}}</span>
     {{'projects.imread.h8Des1' | translate}}<br>
@@ -35,9 +35,11 @@
     {{'projects.imread.h8Des3' | translate}}
   </p>
   <img src="assets/projects/imread/pic13.png" class="p-image p1">
+  <div class="arrow-holder">
+    <img src="assets/projects/arrow.png" alt="arrow" class="arrow" (click)="scrollToTop()" >
+  </div>
   <p class="no-header">{{'projects.imread.sh2' | translate}}</p>
   <p class="footer">{{'projects.gajol.footer' | translate}}</p>
-  <img src="assets/projects/arrow.png" alt="arrow" class="arrow" (click)="scrollToTop()" >
 
 </div>
 
@@ -49,7 +51,7 @@
   </div>
   <p>loading</p>
 </div>
-<img src="assets/projects/imread/logo.png" class="logo" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/imread/logo.svg" class="logo" (load)="imgLoaded()" style="display: none">
 <img src="assets/projects/imread/pic1.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
 <img src="assets/projects/imread/pic2.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
 <img src="assets/projects/imread/pic3.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
