--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -5,27 +5,36 @@
     font-weight: 600;
     font-size: 18px;
     margin: 40px 0 0 40px;
-
+    &.description-after-image{
+      margin-top: 0;
+    }
   }
   h3{
     text-transform: uppercase;
     font-weight: 700;
     font-size: 25px;
-    margin: 34px 0 15px 0;
+    margin: 24px 0 23px 0;
+    line-height: 1;
   }
   h5{
     font-size: 18px;
     font-weight: 600;
     margin: 22.66px 0 12.34px 0;
+    &.h5-before-image{
+      margin-top: 0;
+    }
   }
   p{
     font-size: 14px;
     color: #434343;
     margin: 0;
     &.no-header{
-      margin-top: 38px;
+      margin-top: 0px;
       color: #707070;
       font-size: 10px;
+    }
+    &.no-header-no-image{
+      margin-top: 28px;
     }
     &.footer{
       color: #AAAAAA;
@@ -47,18 +56,36 @@
     h3 {
       margin-left: 40px;
       font-size: 32px;
+      &.h3-after-svg{
+        margin-top: 60px;
+      }
     }
     h5{
       margin-left: 40px;
       margin-right: 65px;
-
+      margin-top: 46px;
+      &.h5-before-header{
+        padding-bottom: 49px;
+      }
+      &.h5-after-header{
+        margin-top: 0px;
+      }
+      &.h5-before-image{
+        margin-top: 0;
+      }
+      &.h5-really-before-image{
+        margin-bottom: 0;
+      }
     }
     p{
       margin-left: 40px;
       margin-right: 60px;
       font-size: 16px;
+      &.before-header{
+        margin-bottom: 71px;
+      }
       &.footer{
-        margin: 28px 0 21px 40px;
+      margin:  28px 0 31px 40px
       }
     }
 
