--- a/src/app/components/projects/projects.scss
+++ b/src/app/components/projects/projects.scss
@@ -96,7 +96,7 @@
               }
               &:hover{
 
-                background: #464646;
+                background: #2e2e2e;
                 opacity: 0.9;
                 transition: opacity 0.3s linear;
 
