--- a/src/app/pages/edc/edc.component.html
+++ b/src/app/pages/edc/edc.component.html
@@ -5,14 +5,14 @@
   <p>{{'projects.edc.h1Des' | translate}}</p>
   <img src="assets/projects/edc/1image.png" class="p-image p1">
   <h3>{{'projects.edc.h2' | translate}}</h3>
-  <h5>{{'projects.edc.sh1' | translate}}</h5>
+  <h5 class="h5-before-header h5-after-header">{{'projects.edc.sh1' | translate}}</h5>
   <h3>{{'projects.edc.h3' | translate}}</h3>
   <p>{{'projects.edc.h3Des' | translate}}</p>
   <img src="assets/projects/edc/2image.png" class="p-image p1">
   <h3>{{'projects.edc.h4' | translate}}</h3>
   <p>{{'projects.edc.h4Des' | translate}}</p>
   <img src="assets/projects/edc/3image.png" class="p-image p1">
-  <img src="assets/projects/edc/4image.png" class="p-image p1">
+  <img src="assets/projects/edc/4image.png" class="p-image p1 no-top">
   <h3>{{'projects.edc.h5' | translate}}</h3>
   <p>{{'projects.edc.h5Des' | translate}}</p>
   <img src="assets/projects/edc/5image.png" class="p-image p1">
@@ -23,41 +23,43 @@
   <p>{{'projects.edc.h7Des' | translate}}</p>
   <p>{{'projects.edc.h7Des1' | translate}}</p>
   <img src="assets/projects/edc/7image.png" class="p-image p1">
-  <img src="assets/projects/edc/8image.png" class="p-image p1">
-  <p class="description">{{'projects.edc.des1' | translate}}</p>
+  <img src="assets/projects/edc/8image.png" class="p-image p1  no-top">
+  <p class="description description-after-image">{{'projects.edc.des1' | translate}}</p>
   <div class="phone-image">
-    <img src="assets/projects/edc/pic1.jpg" class="p-image p1">
-    <img src="assets/projects/edc/pic2.jpg" class="p-image p1">
+    <img src="assets/projects/edc/pic1.jpg" class="p-image p1 edc-phone">
+    <img src="assets/projects/edc/pic2.jpg" class="p-image p1 edc-phone">
   </div>
   <div class="phone-image">
-    <img src="assets/projects/edc/pic2.jpg" class="p-image p1">
-    <img src="assets/projects/edc/pic3.jpg" class="p-image p1">
+    <img src="assets/projects/edc/pic2.jpg" class="p-image p1 edc-phone">
+    <img src="assets/projects/edc/pic3.jpg" class="p-image p1 edc-phone">
   </div>
   <div class="phone-image">
-    <img src="assets/projects/edc/pic4.jpg" class="p-image p1">
-    <img src="assets/projects/edc/pic5.jpg" class="p-image p1">
+    <img src="assets/projects/edc/pic4.jpg" class="p-image p1 edc-phone">
+    <img src="assets/projects/edc/pic5.jpg" class="p-image p1 edc-phone">
   </div>
-  <p class="description">{{'projects.edc.des2' | translate}}</p>
+  <p class="description description-after-image">{{'projects.edc.des2' | translate}}</p>
   <div class="phone-image">
-    <img src="assets/projects/edc/pic7.jpg" class="p-image p1">
-    <img src="assets/projects/edc/pic6.jpg" class="p-image p1">
-  </div>
-  <div class="phone-image">
-    <img src="assets/projects/edc/pic9.jpg" class="p-image p1">
-    <img src="assets/projects/edc/pic8.jpg" class="p-image p1">
-  </div>
-  <p class="description">{{'projects.edc.des3' | translate}}</p>
-  <div class="phone-image">
-    <img src="assets/projects/edc/pic11.jpg" class="p-image p1">
-    <img src="assets/projects/edc/pic10.jpg" class="p-image p1">
+    <img src="assets/projects/edc/pic7.jpg" class="p-image p1 edc-phone">
+    <img src="assets/projects/edc/pic6.jpg" class="p-image p1 edc-phone">
   </div>
   <div class="phone-image">
-    <img src="assets/projects/edc/pic13.jpg" class="p-image p1">
-    <img src="assets/projects/edc/pic12.jpg" class="p-image p1">
+    <img src="assets/projects/edc/pic9.jpg" class="p-image p1 edc-phone">
+    <img src="assets/projects/edc/pic8.jpg" class="p-image p1 edc-phone">
   </div>
-  <p class="no-header">{{'projects.edc.sh2Des' | translate}}</p>
+  <p class="description description-after-image"> {{'projects.edc.des3' | translate}}</p>
+  <div class="phone-image">
+    <img src="assets/projects/edc/pic11.jpg" class="p-image p1 edc-phone">
+    <img src="assets/projects/edc/pic10.jpg" class="p-image p1 edc-phone">
+  </div>
+  <div class="phone-image">
+    <img src="assets/projects/edc/pic13.jpg" class="p-image p1 edc-phone">
+    <img src="assets/projects/edc/pic12.jpg" class="p-image p1 edc-phone">
+  </div>
+  <div class="arrow-holder">
+    <img src="assets/projects/arrow.png" alt="arrow" class="arrow" (click)="scrollToTop()" >
+  </div>
+  <p class="no-header no">{{'projects.edc.sh2Des' | translate}}</p>
   <p class="footer">{{'projects.gajol.footer' | translate}}</p>
-  <img src="assets/projects/arrow.png" alt="arrow" class="arrow" (click)="scrollToTop()" >
 
 </div>
 
