--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,33 +1,47 @@
 @import "../styles/breakpoints";
 $animate: opacity 0.3s linear, height 0.3s ease-in;
 .project-page-loader{
-  max-width: 732px;
+  max-width: 694px;
   width: 100%;
   margin-top: 40px;
 }
 .project-page{
   opacity: 0;
+  position: relative;
   &.show{
     opacity: 1;
     transition: $animate;
   }
+  .arrow-holder{
+    margin-top: -28px;
+    height: 40px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
   .arrow{
-    position: absolute;
-    bottom: 76px;
+    //position: absolute;
+    //float: right;
+    //padding: 10px;
+    //bottom: 76px;
     cursor: pointer;
     max-width: 25px;
     transform: rotate(90deg);
-    right: 85px;
+    //right: 0px;
 
   }
   //border: 1px solid red;
   margin-top: 40px;
   //margin-left: 260px;
-  max-width: 732px;
+  max-width: 694px;
   width: 100%;
   .p-image{
     max-width: 100%;
     margin-top: 28px;
+    margin-bottom: 28px;
+    &.no-top{
+      margin-top: 0;
+    }
   }
   img{
     &.shadow{
@@ -36,7 +50,7 @@ $animate: opacity 0.3s linear, height 0.3s ease-in;
 
     &.center{
       display: block;
-      margin: 28px auto 0 auto;
+      margin: 28px auto 28px auto;
     }
     &.desktop{
       display: none;
@@ -51,17 +65,30 @@ $animate: opacity 0.3s linear, height 0.3s ease-in;
 @include breakpoint(desktop) {
   .project-page-loader{
     margin-left: 292px;
-    width: 732px;
+    width: 694px;
+    margin-top: 45px;
   }
   .project-page{
     margin-left: 292px;
-    width: 732px;
+    width: 694px;
+
+    .logo{
+      margin-bottom: 30px;
+    }
+    .p-image{
+      max-width: 100%;
+      margin-top: 50px;
+      margin-bottom: 39px;
+      &.no-top{
+        margin-top: 0;
+      }
+    }
     .line{
-      height: calc(100% + 30px);
+      height: calc(100% + 95px);
       width: 1px;
       //background: deeppink;
       position: absolute;
-      top: -30px;
+      top: -64px;
       background: #ededed;
     }
 
@@ -71,7 +98,14 @@ $animate: opacity 0.3s linear, height 0.3s ease-in;
       justify-content: center;
     }
     img{
-      &.mobile{
+      &.tab{
+        margin-left: 40px;
+      }
+      &.center{
+        margin: 50px auto 39px auto;
+
+      }
+        &.mobile{
         display: none;
       }
       &.desktop{
