--- a/src/app/pages/stp/stp.component.html
+++ b/src/app/pages/stp/stp.component.html
@@ -4,7 +4,7 @@
     <p>{{'projects.stp.h1Des' | translate}}</p>
     <br>
     <p>{{'projects.stp.h1Des1' | translate}}<span class="color">
-    <a href="https://stpatrick.sevenamstudio.com/?play=" target="_blank">{{'projects.stp.sh1P' | translate}}</a>
+    <a href="https://stpatrickgame.sevenamstudio.com/" target="_blank">{{'projects.stp.sh1P' | translate}}</a>
   </span>.</p>
     <img src="assets/projects/stp/pic1.png" class="p-image p1 patrick">
     <div class="section first">
