--- a/src/app/pages/valentines/valentines.component.html
+++ b/src/app/pages/valentines/valentines.component.html
@@ -4,7 +4,7 @@
   <h3>{{'projects.valentines.h1' | translate}}
   </h3>
   <p>{{'projects.valentines.h1Des' | translate}}
-    <span class="bold"><a href="https://stpatrick.sevenamstudio.com/?play=" target="_blank">{{'projects.valentines.h1Bold' | translate}}</a></span>
+    <span class="bold"><a href="https://boovalentines.firebaseapp.com/" target="_blank">{{'projects.valentines.h1Bold' | translate}}</a></span>
   </p>
   <img src="assets/projects/valentines/1image.png" class="p-image p1">
   <div class="arrow-holder">
