--- a/src/app/pages/imaread/imaread.component.html
+++ b/src/app/pages/imaread/imaread.component.html
@@ -29,7 +29,7 @@
   <img src="assets/projects/imread/pic11.png" class="p-image p1 no-top">
   <img src="assets/projects/imread/pic12.png" class="p-image p1 no-top">
   <h3>{{'projects.imread.h8' | translate}}</h3>
-  <p>{{'projects.imread.h8Des' | translate}} <span class="bold">{{'projects.imread.h8Bold' | translate}}</span>
+  <p>{{'projects.imread.h8Des' | translate}} <span class="bold"><a href="http://imaread.s3-website.eu-central-1.amazonaws.com/">{{'projects.imread.h8Bold' | translate}}</a></span>
     {{'projects.imread.h8Des1' | translate}}<br>
     {{'projects.imread.h8Des2' | translate}}<br>
     {{'projects.imread.h8Des3' | translate}}
