--- a/src/app/pages/learning/learning.component.html
+++ b/src/app/pages/learning/learning.component.html
@@ -57,7 +57,7 @@
   <p>loading</p>
 </div>
 
-<img src="assets/projects/learning/logo.png" class="logo" (load)="imgLoaded()" style="display: none">
+<img src="assets/projects/learning/logo.svg" class="logo" (load)="imgLoaded()" style="display: none">
 <img src="assets/projects/learning/1image.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
 <img src="assets/projects/learning/2image.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
 <img src="assets/projects/learning/3image.png" class="p-image p1" (load)="imgLoaded()" style="display: none">
